Modelo de algorit.